--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-paginate": "^7.1.3",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
